--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "^0.1.4",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.0",
+    "js-cookie": "^2.2.1",
     "linq": "^3.1.0",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
